<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EarthQuakes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_settings">Settings</string>
    <string name="autorefresh_switch_key">settings_autorefresh</string>
    <string name="interval_list_key">settings_interval</string>
    <string name="magnitude_list_key">settings_magnitude</string>
    <string name="magnitude_default_value">0</string>
    <string name="interval_default_value">30</string>
    <string name="wifi_settings">WiFi Settings</string>
    <string name="data_settings">Data Roaming Settings</string>
    <string name="settings">System Settings</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="empty_text"></string>
    <string name="quake_feed">http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.geojson</string>
    <string name="detail_magnitude">Magnitude: </string>
    <string name="detail_place">Place: </string>
    <string name="detail_time">Time: </string>
    <string name="detail_latitude">Latitude: </string>
    <string name="detail_longitude">Longitude: </string>
    <string name="detail_url">Url: </string>

</resources>
